[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 220.534
margin_top = 694.633
margin_right = 408.534
margin_bottom = 777.633
text = "Start"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
